--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <h2>JavaScriopt</h2>
         <ul>
           <li>enter your JavScript notes here</li>
+          <li>A variable is a named container that alows us to store data in out code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
